[package]
name = "tproxy"
version = "0.1.0"
authors = ["Shaolong Chen <shaolong.chen@outlook.it>"]
license = "MIT"
repository = "https://github.com/maolonglong/tproxy"
description = "Minimal TCP relay (proxy)."
edition = "2021"

[dependencies]
anyhow = "1.0"
backon = "0.4"
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum = "0.6.10"
reqwest = { version = "0.11", features = ["json"] }
